    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
24-Sep-2004:
   Problems fixed:
       1. bug #1034067: ServletConfig.getServletName now returns the name specified in web.xml for registered servlets.

23-Sep-2004:
   Additions:
       1. ServletUnit now implements HttpSession.getServletContext().

21-Sep-2004:
   Acknowledgements:
       Thanks to Bart Vanhaute for finding a fixing an infinite recursion problem with frame loading.

   Problems fixed:
       1. Proxy server settings no longer apply to the entire VM; however, accessing a proxy server is not thread-safe
       2. bug #1029139: infinite recursion in frameset page when a frame has src="#"

   Additions:
       1. A username and password may now be specified when accessing a proxy server.

12-Sep-2004:
   Problems fixed:
       1. bug #1025968: Cookies with max-age attribute will now expire (max-age=0 is treated as immediate expiration)
10-Sep-2004:
   Problems fixed:
       1. bug #1013045: Form, Link, and Image id tags are now recognizable from JavaScript where a name tag would be

 9-Sep-2004:
   Problems fixed:
       1. Slashes in URL parameters were being misinterpeted as navigation

 8-Sep-2004:
   Additions:
       1. ServletRunner and ServletUnitClient now support a getSession() method to return the HTTP session to be used
          by the next request or modified by the last request.

25-Aug-2004:
   Additions:
       1. ServletRunner now takes a reference to a web.xml as a File object in its constructor.

10-Aug-2004:
   Additions:
       1. rfe #901172: "application/xhtml+xml" is now recognized as a valid HTML "content-type"